# InvoiceLift

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  anchor.toml  development-roadmap.md  docker-compose.yml  package-lock.json  package.json  pre-grant-roadmap.md  project-overview.md
.devcontainer/: devcontainer.json
.github/workflows/: anchor-build.yml  backend-ci.yml  backend-tests.yml  ci.yml  project-ci.yml  release-idl.yml
app/: .env.example  Dockerfile  EXPLANATION.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src/components/: DevnetHint.tsx  Toast.tsx
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/data/: dev.sqlite  dev.sqlite-shm  dev.sqlite-wal
backend/idl/: invoice_manager.json
backend/src/: anchor.ts  config.ts  db.ts  index.ts  indexer.ts  logger.ts  relayer.ts  validation.ts
backend/test/: listings.spec.ts  listings_v1.spec.ts  listings_v2.spec.ts  phase3.spec.ts  server.spec.ts
docs/: whitepaper.md
docs/adr/: System-full-flow.md  phase-2b-fractionalization.md
docs/prompts-files/: ai-agent-refactors.md  design.md  development-roadmap.md  frontend-ui-roadmap.md  phase-1-roadmap.md  tools-used.md  v0-frontend-prompts.md
programs/invoice_manager/: Cargo.toml
programs/invoice_manager/src/: lib.rs
scripts/: demo.js  demo.ts  init-config.js  package-lock.json  package.json  tsconfig.json
tests/: invoice_manager.js  invoice_manager.spec.ts  tsconfig.json
(+33 files in other folders)
