[package]
name = "invoice_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "invoice_manager"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
cpi = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
